fix long sequence name text wrap issues

--- a/frontend/css/buttons.scss
+++ b/frontend/css/buttons.scss
@@ -322,6 +322,10 @@
       label {
         margin: 0;
         width: 90%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        vertical-align: bottom;
       }
     }
   }
